# gamesetmatch

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  gamesetmatch.c  gauss.c  gauss.h  hashmap.c  hashmap.h  ts_error.h  ts_fac.c  ts_fac.h  ts_fg.c  ts_fg.h  ts_lh_fac.c  ts_lh_fac.h  ts_tr_fac.c  ts_tr_fac.h  ts_var.c  ts_var.h  ts_w_fac.c  ts_w_fac.h
